--- a/web/index.html
+++ b/web/index.html
@@ -90,6 +90,7 @@
       <script src="./static/js/pages/schedule-update.js"></script>
       <script src="./static/js/pages/vehicle-create.js"></script>
       <script src="./static/js/pages/users.js"></script>
+      <script src="./static/js/pages/user-info.js"></script>
       <script src="./static/js/pages/user-update.js"></script>
       <script src="./static/js/pages/user-create.js"></script>
 
@@ -1570,9 +1571,14 @@
                <span class="empty-list-text box card raised" data-intl="empty-list-text-user-picker"></span>
                <!-- User picker row example -->
                <!--
-               <li class="row vertical-layout">
-                  <span class="primary">[user-name]</span>
-                  <span class="secondary">[description]</span>
+               <li class="row">
+                  <div class="flex-horizontal-layout thumbnailed-info">
+                     <div class="round-thumbnail size-3" style="background-image: url(http://localhost:3000/media/u/p/01.jpg)"></div>
+                     <div class="vertical-layout">
+                        <span class="primary">[user-name]</span>
+                        <span class="secondary">[description]</span>
+                     </div>
+                  </div>
                </li>
                -->
             </ul>
