--- a/web/index.html
+++ b/web/index.html
@@ -898,13 +898,13 @@
                   <label class="output-label" data-intl="schedule-update-confirmed"></label>
 
                   <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="schedule-update-confirmed-false">
-                     <input id="schedule-update-confirmed-false" name="schedule-update-confirmed" type="radio" class="mdl-radio__button" checked>
+                     <input id="schedule-update-confirmed-false" name="schedule-update-confirmed" type="radio" value="planned" class="mdl-radio__button" checked>
                      <span class="mdl-radio__label" data-intl="schedule-update-confirmed-false"></span>
                   </label>
                   <label class="output-label detail-label" data-intl="schedule-update-confirmed-false-detail"></label>
 
                   <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="schedule-update-confirmed-true">
-                     <input id="schedule-update-confirmed-true" name="schedule-update-confirmed" type="radio" class="mdl-radio__button">
+                     <input id="schedule-update-confirmed-true" name="schedule-update-confirmed" type="radio" value="confirmed" class="mdl-radio__button">
                      <span class="mdl-radio__label" data-intl="schedule-update-confirmed-true"></span>
                   </label>
                   <label class="output-label detail-label" data-intl="schedule-update-confirmed-true-detail"></label>
