Users' listing visual improvement
- Some visual improvements on users' listing

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,7 @@
       <link rel="stylesheet" href="./static/css/vehicles.css">
       <link rel="stylesheet" href="./static/css/schedules.css">
       <link rel="stylesheet" href="./static/css/schedule-info.css">
+      <link rel="stylesheet" href="./static/css/users.css">
 
 
       <!-- * JS * -->
