--- a/web/index.html
+++ b/web/index.html
@@ -109,7 +109,7 @@
 
             <!-- * Login info section * -->
             <div class="raised drawer-login-canvas">
-               <div class="drawer-login-info thumbnailed-info">
+               <div id="drawer-login-info" class="drawer-login-info thumbnailed-info">
                   <!-- * User photo * -->
                   <div id="drawer-login-info-photo" class="round-thumbnail raised"></div>
                   <!-- * User name and login section * -->
@@ -134,6 +134,7 @@
 
                <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('settings')"><i class="material-icons">settings</i><span>Settings</span></button>
                <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('about-us')"><i class="material-icons">info</i><span>About us</span></button>
+               <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="logoff()"><i class="material-icons">info</i><span>Logoff</span></button>
             </div>
          </nav>
       </div>
