Settings saving and loading
- Now we can save or load a REST settings file

--- a/rest/ui/index.html
+++ b/rest/ui/index.html
@@ -28,6 +28,8 @@
       <script src="../../web/static/js/util/AutoConsumableQueue.js"></script>
 
       <!-- * Modules * -->
+      <script src="./js/modules/modules.js"></script>
+
       <script src="../../web/static/js/srm/srm.js"></script>
 
       <script src="./js/intl/intl.js"></script>
