--- a/web/index.html
+++ b/web/index.html
@@ -141,6 +141,7 @@
                <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="logoff()"><i class="material-icons">info</i><span>Logoff</span></button>
                <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('settings')"><i class="material-icons">settings</i><span data-intl="drawer-nav-settings"></span></button>
                <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('about-us')"><i class="material-icons">info</i><span data-intl="drawer-nav-about-us"></span></button>
+               <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="logoff()"<i class="material-icons">info</i><span data-intl="drawer-nav-about-us"></span></button>
             </div>
          </nav>
       </div>
