Commit to request update
Updating

--- a/web/index.html
+++ b/web/index.html
@@ -78,6 +78,7 @@
       <script src="./static/js/dialogs/default-retry.js"></script>
       <script src="./static/js/dialogs/user-picker.js"></script>
       <script src="./static/js/dialogs/vehicle-picker.js"></script>
+      <script src="./static/js/dialogs/reservations-filters.js"></script>
 
       <!-- * Pages * -->
       <script src="./static/js/pages/splash.js"></script>
