--- a/web/index.html
+++ b/web/index.html
@@ -138,6 +138,7 @@
 
                <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('settings')"><i class="material-icons">settings</i><span data-intl="drawer-nav-settings"></span></button>
                <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('about-us')"><i class="material-icons">info</i><span data-intl="drawer-nav-about-us"></span></button>
+               <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="logoff()"><i class="material-icons">first_page</i><span data-intl="drawer-nav-logoff"></span></button>
             </div>
          </nav>
       </div>
@@ -670,7 +671,7 @@
          <form id="schedule-info-form" class="form content-before-fab">
 
             <!-- Confirmed status output false -->
-            <div class="row active-false-container">
+            <div class="row active-neutral-container">
                <i class="material-icons">assignment_late</i>
                <div class="vertical-layout">
                   <label class="output-label" data-intl="schedule-info-confirmed"></label>
