--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,9 @@
 
       <script src="./static/js/date-format/date-format.js"></script>
 
+      <script src="./static/js/settings/settings.js"></script>
+      <script src="./static/js/settings/apply.js"></script>
+
       <script src="./static/js/anim/anim.js"></script>
 
       <script src="./static/js/snack/snack.js"></script>
@@ -76,6 +79,7 @@
       <script src="./static/js/dialogs/default-notice.js"></script>
       <script src="./static/js/dialogs/default-consent.js"></script>
       <script src="./static/js/dialogs/default-retry.js"></script>
+      <script src="./static/js/dialogs/default-select.js"></script>
       <script src="./static/js/dialogs/user-picker.js"></script>
       <script src="./static/js/dialogs/vehicle-picker.js"></script>
 
@@ -99,6 +103,8 @@
       <script src="./static/js/pages/user-info.js"></script>
       <script src="./static/js/pages/user-create.js"></script>
       <script src="./static/js/pages/user-update.js"></script>
+
+      <script src="./static/js/pages/settings.js"></script>
 
       <title>Eiger</title>
    </head>
@@ -1595,6 +1601,33 @@
 
 
       <!--
+      Settings Page
+      -->
+      <section id="settings-section" data-page="settings">
+         <!-- Appbar -->
+         <header class="app-bar flex-horizontal-layout tinted">
+            <button type="button" onclick="spa.goBack()" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">arrow_back</button>
+            <span data-intl="settings-header"></span>
+         </header>
+
+         <!-- Vehicle update form -->
+         <form id="settings-form" class="form content-before-fab" autocomplete="off">
+
+            <!-- Language input -->
+            <div class="row">
+               <i class="material-icons">translate</i>
+               <div class="vertical-layout">
+                  <label class="output-label" data-intl="settings-language"></label>
+                  <button id="settings-language" type="button" name="button"></button>
+               </div>
+            </div>
+
+         </form>
+      </section>
+
+
+
+      <!--
       Dialogs
       -->
       <div id="dialog-overlay" class="dialogs">
@@ -1655,6 +1688,42 @@
             <div class="flat-button-container">
                <button id="default-retry-cancel-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect" data-intl="default-retry-cancel"></button>
                <button id="default-retry-retry-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect highlighted" data-intl="default-retry-retry"></button>
+            </div>
+         </section>
+
+
+
+         <!--
+         User picker Dialog
+         -->
+         <section class="dialog card raised" data-dialog="default-select">
+            <!-- Appbar -->
+            <header class="app-bar flex-horizontal-layout">
+               <i id="default-select-icon" class="material-icons">_</i>
+               <span id="default-select-title"></span>
+            </header>
+
+            <!-- User picker list -->
+            <ul class="list" id="default-select-list">
+               <span class="empty-list-text box card raised" data-intl="empty-list-text-default-select"></span>
+               <!-- User picker row example -->
+               <!--
+               <li class="row">
+                  <div class="flex-horizontal-layout thumbnailed-info">
+                     <div class="round-thumbnail size-3" style="background-image: url(http://localhost:3000/media/u/p/01.jpg)"></div>
+                     <div class="vertical-layout">
+                        <span class="primary">[user-name]</span>
+                        <span class="secondary">[description]</span>
+                     </div>
+                  </div>
+               </li>
+               -->
+            </ul>
+
+            <!-- Button container -->
+            <div class="flat-button-container">
+               <button id="default-select-cancel-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect" data-intl="default-select-cancel"></button>
+               <button id="default-select-ok-button" type="button" class="flat-button mdl-js-button mdl-js-ripple-effect highlighted" data-intl="default-select-ok"></button>
             </div>
          </section>
 
