--- a/web/index.html
+++ b/web/index.html
@@ -1694,7 +1694,7 @@
 
 
          <!--
-         User picker Dialog
+         Default select Dialog
          -->
          <section class="dialog card raised" data-dialog="default-select">
             <!-- Appbar -->
@@ -1703,21 +1703,9 @@
                <span id="default-select-title"></span>
             </header>
 
-            <!-- User picker list -->
+            <!-- Select list -->
             <ul class="list" id="default-select-list">
                <span class="empty-list-text box card raised" data-intl="empty-list-text-default-select"></span>
-               <!-- User picker row example -->
-               <!--
-               <li class="row">
-                  <div class="flex-horizontal-layout thumbnailed-info">
-                     <div class="round-thumbnail size-3" style="background-image: url(http://localhost:3000/media/u/p/01.jpg)"></div>
-                     <div class="vertical-layout">
-                        <span class="primary">[user-name]</span>
-                        <span class="secondary">[description]</span>
-                     </div>
-                  </div>
-               </li>
-               -->
             </ul>
 
             <!-- Button container -->
