--- a/web/index.html
+++ b/web/index.html
@@ -188,7 +188,7 @@
          <div id="login-container" class="center">
 
             <!-- Branding -->
-            <div id="login-logo" class="center"></div>
+            <div id="login-logo" class="inflate center"></div>
 
             <!-- Separators -->
             <div class="horizontal-line"></div>
@@ -225,7 +225,7 @@
       <section id="vehicles-section" data-page="">
          <header class="app-bar flex-horizontal-layout tinted raised">
             <button type="button" onclick="drawer.open()" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">menu</button>
-            <span>Eiger</span>
+            <span data-intl="vehicles-header"></span>
             <button type="button" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab right">today</button>
          </header>
 
@@ -715,6 +715,17 @@
                      <span id="schedule-info-end-time" class="secondary"><!--[end-time]--></span>
                      <span id="schedule-info-end-date"><!--[end-date]--></span>
                   </div>
+               </div>
+            </div>
+
+            <div class="horizontal-separator"></div>
+
+            <!-- Code output -->
+            <div class="row">
+               <i class="material-icons">info</i>
+               <div class="vertical-layout">
+                  <label class="output-label" data-intl="schedule-info-code"></label>
+                  <span id="schedule-info-code" class="labeled-output"><!--[code]--></span>
                </div>
             </div>
 
