--- a/web/index.html
+++ b/web/index.html
@@ -120,7 +120,7 @@
 
             <!-- * Login info section * -->
             <div class="raised drawer-login-canvas">
-               <div id="drawer-login-info" class="drawer-login-info thumbnailed-info">
+               <div id="drawer-login-info" class="drawer-login-info thumbnailed-info mdl-js-button mdl-js-ripple-effect">
                   <!-- * User photo * -->
                   <div id="drawer-login-info-photo" class="round-thumbnail raised"></div>
                   <!-- * User name and login section * -->
