--- a/rest/ui/index.html
+++ b/rest/ui/index.html
@@ -147,7 +147,7 @@
          </header>
 
 
-         <!-- Vehicle update form -->
+         <!-- Email update form -->
          <form id="email-settings-form" class="form content-before-fab" autocomplete="off">
 
             <!-- SMTP server input -->
@@ -190,18 +190,9 @@
 
             <div class="horizontal-separator"></div>
 
-            <!-- Confirmation send input -->
-            <div class="row mdl-input-row">
-               <i class="material-icons">email</i>
-               <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="email-settings-confirmation-send">
-                  <input id="email-settings-confirmation-send" type="checkbox" class="mdl-checkbox__input">
-                  <span class="mdl-checkbox__label" data-intl="email-settings-confirmation-send"></span>
-               </label>
-            </div>
-
             <!-- Confirmation E-mail input -->
             <div class="row mdl-input-row">
-               <i class="material-icons">_</i>
+               <i class="material-icons">email</i>
                <span class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                   <input id="email-settings-confirmation-email" class="mdl-textfield__input" type="email" required="true">
                   <label class="mdl-textfield__label" for="email-settings-confirmation-email" data-intl="email-settings-confirmation-email"></label>
