Fixed some Bugs

--- a/rest/ui/index.html
+++ b/rest/ui/index.html
@@ -51,6 +51,8 @@
 
       <script src="./js/pages/subscriptions.js"></script>
 
+      <script src="../../web/static/js/file-encoder/file-encoder.js"></script>
+
       <script src="../../web/static/js/mdl/mdl-util.js"></script>
 
       <script src="./js/dev-tools.js"></script>
