E-mail system fix
- Now the e-mail system is properly working

--- a/rest/ui/index.html
+++ b/rest/ui/index.html
@@ -28,8 +28,6 @@
       <script src="../../web/static/js/util/AutoConsumableQueue.js"></script>
 
       <!-- * Modules * -->
-      <script src="./js/modules/modules.js"></script>
-
       <script src="../../web/static/js/srm/srm.js"></script>
 
       <script src="./js/intl/intl.js"></script>
@@ -41,7 +39,7 @@
       <script src="../../web/static/js/snack/snack.js"></script>
 
       <script src="../../web/static/js/drawer/drawer.js"></script>
-      <script src="../../web/static/js/drawer/setup.js"></script>
+      <script src="./js/drawer/setup.js"></script>
 
       <script src="../../web/static/js/dialog/Dialog.js"></script>
       <script src="../../web/static/js/dialog/dialogger.js"></script>
