Select date not available dialog
- Added a dialog informing that the select date on index is not
available yet

--- a/web/index.html
+++ b/web/index.html
@@ -228,7 +228,7 @@
          <header class="app-bar flex-horizontal-layout tinted raised">
             <button type="button" onclick="drawer.open()" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab">menu</button>
             <span data-intl="vehicles-header"></span>
-            <button type="button" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab right">today</button>
+            <button id="vehicles-select-date-fab" type="button" class="inflate material-icons mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored raised fab right">today</button>
          </header>
 
          <!-- Vehicles' cards list -->
